# sudoku-solver

./: board.py  board.txt  config.yaml  main.py  play_game.py  pyproject.toml  util.py
commands/: commands.py  filter_by_rule.py  rule_bruteforce.py  util.py
commands/strategies/: naked_single.py  remove_given_from_candidate_cell.py  remove_given_from_neighbouring_cells.py  rule_bruteforce.py
commands/strategies/tests/: test_filter_by_rule.py  test_rule_bruteforce.py
commands/tests/: test_commands.py  test_filter_by_rule.py  test_rule_bruteforce.py  test_utils.py
components/: game.py  raw_board.py  strategy_loader.py
components/tests/: test_game.py  test_raw_board.py
restrictions/: normal_sudoku.py  restriction.py  test_normal_sudoku.py
restrictions/tests/: test_normal_sudoku.py
