[tool.poetry]
name = "rich_tables"
version = "0.1.0"
description = "Rich tables try"
authors = ["Timofey Danshin <t.danshin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.16.1"
PyYAML = "^6.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
